syntax = "proto3";

message TeamId
{
  uint64 team_id = 1;
}
